# Girder-plugin

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
nifti_viewer/: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  plugin.cmake  pyproject.toml  setup.py
nifti_viewer/girder_nifti_viewer/: __init__.py
nifti_viewer/girder_nifti_viewer/web_client/: main.js  package.json  vite.config.ts
nifti_viewer/girder_nifti_viewer/web_client/constants/: NiftiConfig.js
nifti_viewer/girder_nifti_viewer/web_client/models/: NiftiFileModel.js
nifti_viewer/girder_nifti_viewer/web_client/stylesheets/: niftiItem.styl  niftiSliceMetadata.styl
nifti_viewer/girder_nifti_viewer/web_client/templates/: niftiItem.pug  niftiSliceMetadata.pug  parseNiftiItem.pug
nifti_viewer/girder_nifti_viewer/web_client/views/: NiftiSliceImageWidget.js  NiftiView.js
nifti_viewer/plugin_tests/: nifti_viewer_test.py
nifti_viewer/plugin_tests/data/: README.md
oauth2/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md
oauth2/girder_oauth/: settings.py
oauth2/girder_oauth/providers/: __init__.py  keycloak.py
oauth2/girder_oauth/web_client/stylesheets/: configView.styl  oauthLoginView.styl
oauth2/girder_oauth/web_client/templates/: configView.pug
oauth2/girder_oauth/web_client/views/: ConfigView.js  OAuthLoginView.js
